<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnConfirm"
        android:layout_below="@+id/toolbar_layout"
        android:layout_marginTop="@dimen/default_spacing"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/cvQuote"
                layout="@layout/item_quote"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="@dimen/default_spacing" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_spacing"
                android:elevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/default_double"
                    android:paddingBottom="@dimen/default_double">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilQuoteText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_spacing"
                        android:layout_marginEnd="@dimen/default_spacing"
                        android:hint="@string/input_quote_message"
                        app:counterEnabled="true"
                        app:counterMaxLength="300"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etQuoteText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:imeOptions="actionDone"
                            android:inputType="textCapSentences"
                            android:maxLines="7"
                            android:paddingTop="@dimen/default_small"
                            android:scrollHorizontally="false"
                            android:text="@string/default_quote_text"
                            tools:text="Together we will live forever" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="@dimen/default_spacing"
                        android:background="@color/divider" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_spacing"
                        android:layout_marginEnd="@dimen/default_spacing"
                        android:hint="@string/input_quote_author"
                        app:counterEnabled="true"
                        app:counterMaxLength="50">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etQuoteAuthor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:imeOptions="actionDone"
                            android:inputType="textCapWords"
                            android:lines="1"
                            android:maxLines="1"
                            android:paddingTop="@dimen/default_small"
                            android:text="@string/default_author_text"
                            tools:text="Clint Mansell" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <!-- TODO Sliders for setting font size to quote -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_spacing">

                        <TextView
                            android:id="@+id/tvTextSizeCounter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentEnd="true"
                            android:gravity="center"
                            android:textSize="18sp"
                            tools:text="0" />

                        <SeekBar
                            android:id="@+id/sbQuoteTextSize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvTextSizeCounter"
                            android:max="84"
                            android:progress="0" />

                    </RelativeLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvFontsList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/default_spacing"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:itemCount="6"
                        tools:listitem="@layout/item_font" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_update_quote" />

</RelativeLayout>